--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body class="text-lg">
+<body class="text-lg bg-[#eaeff7]">
     <header class="w-full p-4 bg-white text-xl">
         <div class="container mx-auto flex items-center justify-between">
             <a href="index.html">
@@ -14,6 +14,8 @@
             </a>
             <div class="flex items-center gap-6">
                 <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
+                <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Задания</a>
+                <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Программа обучения</a>
             </div>
         </div>
     </header>
@@ -116,5 +118,10 @@
             </div>
         </div>
     </main>
+
+    <footer class="w-full bg-white flex flex-col items-center gap-2 text-center p-4">
+        <p class="text-xl text-[#4B79F6] font-medium">Education</p>
+        <p class="text-base text-gray-500">© 2025 Education. Все права защищены.</p>
+    </footer>
 </body>
 </html>
