--- a/Pages/program.html
+++ b/Pages/program.html
@@ -9,13 +9,13 @@
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen">
     <header class="w-full p-4 bg-white text-xl">
         <div class="container mx-auto flex items-center justify-between">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../Assets/Images/header/logo.png" alt="" class="w-16">
             </a>
             <div class="flex items-center gap-6">
-                <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
-                <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Задания</a>
-                <a href="" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Программа обучения</a>
+                <a href="../index.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
+                <a href="tasks.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Задания</a>
+                <a href="program.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Программа обучения</a>
             </div>
         </div>
     </header>
