--- a/Pages/task1.html
+++ b/Pages/task1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задания</title>
+    <title>Задание 1</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
@@ -21,15 +21,22 @@
     </header>
 
     <main class="w-full container mx-auto grow flex items-center justify-center my-10 flex-col gap-10">
-        <a href="task1.html" class="px-4 py-1.5 rounded-xl bg-white font-medium text-xl transition-all duration-500 hover:opacity-70">Задание 1</a>
-        <a href="task2.html" class="px-4 py-1.5 rounded-xl bg-white font-medium text-xl transition-all duration-500 hover:opacity-70">Задание 2</a>
-        <a href="task3.html" class="px-4 py-1.5 rounded-xl bg-white font-medium text-xl transition-all duration-500 hover:opacity-70">Задание 3</a>
-        <a href="task4.html" class="px-4 py-1.5 rounded-xl bg-white font-medium text-xl transition-all duration-500 hover:opacity-70">Задание 4</a>
+        <a href="tasks.html" class="w-fit self-start py-1.5 px-4 rounded-xl bg-[#4B79F6] text-white">Вернуться назад</a>
+        <p class="text-3xl text-[#4B79F6] font-medium text-center">Задание 1</p>
+        
     </main>
 
     <footer class="w-full bg-white flex flex-col items-center gap-2 text-center p-4 mt-auto">
         <p class="text-xl text-[#4B79F6] font-medium">Education</p>
         <p class="text-base text-gray-500">© 2025 Education. Все права защищены.</p>
     </footer>
+
+    <style>
+
+    </style>
+
+    <script>
+
+    </script>
 </body>
 </html>
