--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen">
+<body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
     <header class="w-full p-4 bg-white text-xl">
         <div class="container mx-auto flex items-center justify-between">
             <a href="index.html">
