--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <base href="/">
 </head>
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
     <header class="w-full p-4 bg-white text-xl relative z-[3]">
         <div class="container mx-auto flex items-center justify-between">
-            <a href="/index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
+            <a href="index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
                 Education<span class="text-[#4b79f6]">Lab</span>
             </a>
             <div id="menu" class="flex items-center gap-6 max-md:flex-col max-md:w-full max-md:py-6 max-md:px-4 max-md:absolute max-md:bg-white max-md:top-0 max-md:left-0 max-md:border-t-2 border-[#4b79f6] transition-all duration-500 max-md:-translate-y-full">
-                <a href="/index.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
-                <a href="/Pages/tasks.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Задания</a>
-                <a href="/Pages/program.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Программа обучения</a>
+                <a href="index.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
+                <a href="Pages/tasks.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Задания</a>
+                <a href="Pages/program.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Программа обучения</a>
             </div>
             <button id="toggler" class="md:hidden cursor-pointer">
                 <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -157,13 +156,13 @@
     </main>
 
     <footer class="w-full bg-white flex flex-col items-center gap-2 text-center p-4 mt-auto">
-        <a href="/index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
+        <a href="index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
             Education<span class="text-[#4b79f6]">Lab</span>
         </a>
         <p class="text-base text-gray-500">© 2025 Education. Все права защищены.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/Assets/JS/main.js"></script>
+    <script src="Assets/JS/main.js"></script>
 </body>
 </html>
