--- a/Pages/task4.html
+++ b/Pages/task4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 4</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="../Assets/CSS/main.css">
 </head>
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
     <header class="w-full p-4 bg-white text-xl relative z-[3]">
