--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="Assets/CSS/main.css">
 </head>
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
     <header class="w-full p-4 bg-white text-xl relative z-[3]">
