--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 <body class="text-lg bg-[#eaeff7] flex flex-col min-h-screen font-mono">
     <header class="w-full p-4 bg-white text-xl relative z-[3]">
         <div class="container mx-auto flex items-center justify-between">
-            <a href="index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
-                Education<span class="text-[#4b79f6]">Lab</span>
+            <a href="index.html" class="flex items-center gap-2 transition-all duration-500 hover:rotate-6 hover:scale-110">
+                <!-- Контейнер логотипа -->
+                <div class="w-8 h-8 bg-[#1E90FF] rounded-[8px] flex items-center justify-center">
+                    <!-- Лупа -->
+                    <div class="w-[20px] h-[20px] border-3 border-[#87CEEB] rounded-full relative 
+                                before:content-[''] before:w-[15px] before:h-[15px] before:bg-white before:rounded-full 
+                                before:absolute before:top-1/2 before:left-1/2 before:-translate-x-1/2 before:-translate-y-1/2 
+                                after:content-[''] after:w-[10px] after:h-[3px] after:bg-black after:absolute 
+                                after:-bottom-1.5 after:-right-1.5 after:rotate-45">
+                    </div>
+                </div>
+                <!-- Текст -->
+                <span class="text-lg font-bold">
+                    Education<span class="text-[#1E90FF]">Lab</span>
+                </span>
             </a>
             <div id="menu" class="flex items-center gap-6 max-md:flex-col max-md:w-full max-md:py-6 max-md:px-4 max-md:absolute max-md:bg-white max-md:top-0 max-md:left-0 max-md:border-t-2 border-[#4b79f6] transition-all duration-500 max-md:-translate-y-full">
                 <a href="index.html" class="flex flex-col after:w-0 after:h-[2px] after:rounded-full after:bg-[#4b79f6] after:transition-all after:duration-500 hover:after:w-full">Главная</a>
@@ -155,8 +168,21 @@
     </main>
 
     <footer class="w-full bg-white flex flex-col items-center gap-2 text-center p-4 mt-auto">
-        <a href="index.html" class="text-2xl font-semibold transition-all duration-500 hover:rotate-6 hover:scale-110">
-            Education<span class="text-[#4b79f6]">Lab</span>
+        <a href="index.html" class="flex items-center gap-2 transition-all duration-500 hover:rotate-6 hover:scale-110">
+            <!-- Контейнер логотипа -->
+            <div class="w-8 h-8 bg-[#1E90FF] rounded-[8px] flex items-center justify-center">
+                <!-- Лупа -->
+                <div class="w-[20px] h-[20px] border-3 border-[#87CEEB] rounded-full relative 
+                            before:content-[''] before:w-[15px] before:h-[15px] before:bg-white before:rounded-full 
+                            before:absolute before:top-1/2 before:left-1/2 before:-translate-x-1/2 before:-translate-y-1/2 
+                            after:content-[''] after:w-[10px] after:h-[3px] after:bg-black after:absolute 
+                            after:-bottom-1.5 after:-right-1.5 after:rotate-45">
+                </div>
+            </div>
+            <!-- Текст -->
+            <span class="text-lg font-bold">
+                Education<span class="text-[#1E90FF]">Lab</span>
+            </span>
         </a>
         <p class="text-base text-gray-500">© 2025 Education. Все права защищены.</p>
     </footer>
